--- a/Avisoo/configfile.ini
+++ b/Avisoo/configfile.ini
@@ -4,5 +4,4 @@ pasword = ZsZs4455#
 second = 30
 
 [browser]
-useragent = Mozilla/5.0 (Linux; Android 12; SM-T505N Build/SP1A.210812.016; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/122.0.6261.105 Safari/537.36
-
+useragent = 
